# subDAO-contracts

./: .gitignore  .gitmodules  README.md  build.sh
auth/: Cargo.toml  README.md  lib.rs
base/: Cargo.toml  README.md  lib.rs  lib1.rc
bindAddress/: Cargo.toml  README.md  lib.rs
dao_manager/: Cargo.toml  README.md  lib.rs
erc20/: Cargo.toml  README.md  lib.rs
erc20_delegator_test/: Cargo.toml  lib.rs
erc20_delegator_test/erc20_test/: Cargo.toml
erc20_test/: Cargo.toml  lib.rs
github/: Cargo.toml  README.md  lib.rs
ink/: .gitignore
main/: Cargo.toml  README.md  lib.rs
org/: Cargo.toml  README.md  lib.rs  readme.md
redpacket/: Cargo.toml  README.md  lib.rs
release/: auth_v0.1.contract  auth_v0.1.json  auth_v0.1.wasm  base_v0.1.contract  base_v0.1.json  base_v0.1.wasm  bindaddress_v0.1.contract  bindaddress_v0.1.json  bindaddress_v0.1.wasm  dao_manager_v0.1.contract  dao_manager_v0.1.json  dao_manager_v0.1.wasm  erc20_v0.1.contract  erc20_v0.1.json  erc20_v0.1.wasm  github_v0.1.contract  github_v0.1.json  github_v0.1.wasm  main_v0.1.contract  main_v0.1.json  main_v0.1.wasm  org_v0.1.contract  org_v0.1.json  org_v0.1.wasm  redpacket_v0.1.contract  redpacket_v0.1.json  redpacket_v0.1.wasm  template_manager_v0.1.contract  template_manager_v0.1.json  template_manager_v0.1.wasm  user_manager_v0.1.contract  user_manager_v0.1.json  user_manager_v0.1.wasm  vault_v0.1.contract  vault_v0.1.json  vault_v0.1.wasm  vault_v0.2.contract  vault_v0.2.json  vault_v0.2.wasm  vote_manager_v0.1.contract  (+2 more)
template_manager/: Cargo.toml  README.md  lib.rs
user_manager/: Cargo.toml  lib.rs
vault/: Cargo.toml  README.md  lib.rs  readme.md
vote/: Cargo.toml  lib.rs
vote_manager/: Cargo.toml  README.md  lib.rs
