[package]
name = "dao_manager"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3",  default-features = false }
ink_metadata = { version = "3.0.0-rc3",  default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3",  default-features = false }
ink_prelude = { version = "3.0.0-rc3",  default-features = false }
ink_storage = { version = "3.0.0-rc3",  default-features = false }
ink_lang = { version = "3.0.0-rc3",  default-features = false }

scale = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }


# dao modules
erc20 = { version = "0.1.0", path = "../erc20", default-features = false, features = ["ink-as-dependency"] }
org = { version = "0.1.0", path = "../org", default-features = false, features = ["ink-as-dependency"] }
vault = { version = "0.1.0", path = "../vault", default-features = false, features = ["ink-as-dependency"] }
vote_manager = { version = "0.1.0", path = "../vote_manager", default-features = false, features = ["ink-as-dependency"] }
github = { version = "0.1.0", path = "../github", default-features = false, features = ["ink-as-dependency"] }
base = { version = "0.1.0", path = "../base", default-features = false, features = ["ink-as-dependency"] }
template_manager = { version = "0.1.0", path = "../template_manager", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "dao_manager"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
    "erc20/std",
    "org/std",
    "vault/std",
    "vote_manager/std",
    "github/std",
    "base/std",
    "template_manager/std",
]
ink-as-dependency = []
