[package]
name = "main"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
#ink_primitives = { version = "3.0.0-rc3", path = "../../crates/primitives", default-features = false }
#ink_metadata = { version = "3.0.0-rc3", path = "../../crates/metadata", default-features = false, features = ["derive"], optional = true }
#ink_env = { version = "3.0.0-rc3", path = "../../crates/env", default-features = false }
#ink_storage = { version = "3.0.0-rc3", path = "../../crates/storage", default-features = false }
#ink_lang = { version = "3.0.0-rc3", path = "../../crates/lang", default-features = false }
#
#scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
#
#adder = { version = "3.0.0-rc3", path = "adder", default-features = false, features = ["ink-as-dependency"] }
#subber = { version = "3.0.0-rc3", path = "subber", default-features = false, features = ["ink-as-dependency"] }
#accumulator = { version = "3.0.0-rc3", path = "accumulator", default-features = false, features = ["ink-as-dependency"] }
#scale-info = { version = "0.4", default-features = false, features = ["derive"], optional = true }

ink_primitives = { version = "3.0.0-rc3",  default-features = false }
ink_metadata = { version = "3.0.0-rc3",  default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3",  default-features = false }
ink_prelude = { version = "3.0.0-rc3",  default-features = false }
ink_storage = { version = "3.0.0-rc3",  default-features = false }
ink_lang = { version = "3.0.0-rc3",  default-features = false }

scale = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

erc20 = { version = "0.1.0", path = "../erc20", default-features = false, features = ["ink-as-dependency"] }
org = { version = "0.1.0", path = "../org", default-features = false, features = ["ink-as-dependency"] }
dao_manager = { version = "0.1.0", path = "../dao_manager", default-features = false, features = ["ink-as-dependency"] }
template_manager = { version = "0.1.0", path = "../template_manager", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "main"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
    "erc20/std",
    "dao_manager/std",
    "template_manager/std",
]
ink-as-dependency = []

[workspace]
